set a proper z-index to avoid ux issues

--- a/www/static/css/bootstrap-switch.css
+++ b/www/static/css/bootstrap-switch.css
@@ -119,7 +119,7 @@
   text-align: center;
   margin-top: -1px;
   margin-bottom: -1px;
-  z-index: 100;
+  z-index: 1;
   width: 34%;
   border-left: 1px solid #cccccc;
   border-right: 1px solid #cccccc;
